調整字型相關設定

--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: 'NotoSans-Regular';
+    src: url('fonts/NotoSans-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'NotoSans-Bold';
+    src: url('fonts/NotoSans-Bold.ttf');
+}
+
+@font-face {
+    font-family: 'NotoSans-Black';
+    src: url('fonts/NotoSans-Black.ttf');
+}
+
 html {
     background-color: #EDF2C5;
     box-sizing: border-box; /*預設是cotent-box*/
@@ -8,7 +23,7 @@ html {
 }
 
 body {
-    font-family: Noto Sans;
+    
 }
 
 .container {
@@ -24,8 +39,8 @@ body {
 }
 
 .header-title {
+    font-family: NotoSans-Black;
     font-size: 2.75em;
-    font-weight: 900;
     line-height: normal;
     color: #778A50;
 }
@@ -38,7 +53,7 @@ body {
 .header-buttons-left {
     border-right: 1px solid #778A50; /*直線加在這*/
     margin-right: -3px; /*呃可以這樣用嗎？*/
-    /*margin-top: 5px;*/ /*對齊用*/
+    margin-top: 5px; /*對齊用*/
 }
 
 .header-buttons-left-items {
@@ -51,6 +66,9 @@ body {
 
 .header-buttons-right-items {
     color: #778A50;
+    font-family: NotoSans-Bold;
+    font-size: 0.875em;
+    line-height: normal;
     border: 1px solid #778A50;
     border-radius: 3px;
     padding: 4px 8px;
